[gd_scene load_steps=7 format=3 uid="uid://bkhmndrm0no54"]

[ext_resource type="Script" uid="uid://cfsfpusd1bd3m" path="res://scripts/start_menu.gd" id="1_m7x51"]
[ext_resource type="Texture2D" uid="uid://r5g32uheby7r" path="res://art/ui/background.png" id="2_h61rw"]
[ext_resource type="Texture2D" uid="uid://syhea0e7mcxs" path="res://art/ui/title.png" id="3_fcv5n"]
[ext_resource type="Theme" uid="uid://c3a08rjq0iuh2" path="res://custom_resources/font_theme.tres" id="4_h61rw"]
[ext_resource type="Script" uid="uid://b60mcoxupnvv7" path="res://custom_resources/richtext_bounce.gd" id="5_fcv5n"]

[sub_resource type="RichTextEffect" id="RichTextEffect_gee14"]
script = ExtResource("5_fcv5n")
metadata/_custom_type_script = "uid://b60mcoxupnvv7"

[node name="StartMenu" type="Node2D"]
script = ExtResource("1_m7x51")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_h61rw")
offset = Vector2(320, 180)

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(320, 115)
scale = Vector2(3, 3)
texture = ExtResource("3_fcv5n")

[node name="ExternalStartButton" type="Button" parent="."]
offset_left = 176.0
offset_top = 231.0
offset_right = 464.0
offset_bottom = 263.0
theme = ExtResource("4_h61rw")
theme_override_colors/font_hover_color = Color(0.0901961, 0.639216, 0.392157, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
button_mask = 3
text = "Start external device game"
flat = true

[node name="VirtualStartButton" type="Button" parent="."]
offset_left = 208.0
offset_top = 274.0
offset_right = 432.0
offset_bottom = 306.0
theme = ExtResource("4_h61rw")
theme_override_colors/font_hover_color = Color(0.152941, 0.662745, 0.435294, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
button_mask = 3
text = "Start virtual game"
flat = true

[node name="ConnectingDeviceScreen" type="Node2D" parent="."]
visible = false

[node name="LoadingText" type="RichTextLabel" parent="ConnectingDeviceScreen"]
offset_left = 96.0
offset_top = 235.0
offset_right = 552.0
offset_bottom = 273.0
theme = ExtResource("4_h61rw")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "Looking for external device [wave amp=-30 freq=-5]. . .[/wave]"
horizontal_alignment = 1
custom_effects = [SubResource("RichTextEffect_gee14")]

[node name="StartButton" type="Button" parent="ConnectingDeviceScreen"]
offset_left = 280.0
offset_top = 272.0
offset_right = 360.0
offset_bottom = 304.0
theme = ExtResource("4_h61rw")
theme_override_colors/font_hover_color = Color(0.0901961, 0.639216, 0.392157, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
button_mask = 3
text = "Start"
flat = true

[node name="BackButton" type="Button" parent="ConnectingDeviceScreen"]
offset_left = 280.0
offset_top = 304.0
offset_right = 360.0
offset_bottom = 336.0
theme = ExtResource("4_h61rw")
theme_override_colors/font_hover_color = Color(0.0901961, 0.639216, 0.392157, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
button_mask = 3
text = "Back"
flat = true

[connection signal="pressed" from="ExternalStartButton" to="." method="_on_external_start_button_pressed"]
[connection signal="pressed" from="VirtualStartButton" to="." method="_on_virtual_start_button_pressed"]
[connection signal="pressed" from="ConnectingDeviceScreen/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ConnectingDeviceScreen/BackButton" to="." method="_on_back_button_pressed"]
